tests/ui/error-codes/E0614.stderr
error[E0614]: type `u32` cannot be dereferenced
  --> $DIR/E0614.rs:3:5
   |
LL |     *y;
   |     ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0614`.
